# SCINTIA

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  LICENSE  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1576a61b6fbe_initial_schema.py  1db7e7ee14fc_user_mfa_fields.py  89bc0fb1b73c_patient_linkage_hash.py  e4ce5b593e78_rbac_scoping_retention.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  audit.py  authz.py  config.py  crypto.py  db.py  logging.py  mfa.py  middleware.py  ratelimit.py  security.py
backend/app/models/: __init__.py  _types.py  audit.py  base.py  clinical.py  device.py  enums.py  patient.py  report.py  study.py  user.py
backend/app/routers/: __init__.py  api.py  auth.py  health.py  reports.py  studies.py  users.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  health.py  history.py  ingestion.py  report.py  results.py  segmentation.py  series.py  study.py  user.py
backend/app/services/: __init__.py  analysis.py  anonymization.py  erasure.py  export.py  history.py  ingestion.py  interop.py  patients.py  pipeline.py  quantification.py  rendering.py  report.py  report_generation.py  retention.py  segmentation.py  storage.py  studies.py
backend/app/services/exams/: __init__.py  base.py  bone.py  lung_vq.py  mibg.py  myocardial.py  octreotide.py  parathyroid.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_analysis.py  test_anonymization.py  test_api_flow.py  test_authz.py  test_claude_generator.py  test_crypto.py  test_erasure.py  test_export.py  test_hardening.py  test_health.py  test_history.py  test_ingestion.py  test_ingestion_robustness.py  test_interop.py  test_models_smoke.py  test_pipeline.py  test_progress.py  test_quantification.py  test_report.py  test_segmentation.py  test_segmentation_adapter.py  test_storage.py  test_viewer.py
docs/: 00_CONTEXTE.md  01_SPECIFICATIONS.md  02_ARCHITECTURE.md  03_CHARTE_GRAPHIQUE.md  04_MODELE_DONNEES.md  05_CONTRAINTES_SECURITE.md  06_ROADMAP.md  07_GLOSSAIRE.md  08_PROMPT_CR_SCINTI_OSSEUSE.md  09_GABARIT_METHODE_CLINIQUE.md  10_MISE_EN_ROUTE.md  PROMPT_INITIAL_claude_code.md  scintia_brand_board.html
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/studies/: page.tsx
frontend/app/studies/[id]/: page.tsx
frontend/app/studies/[id]/viewer/: page.tsx
frontend/app/studies/new/: page.tsx
frontend/components/: DicomViewer.tsx  DicomViewerPro.tsx  ExamTypeSelect.tsx  LanguageSwitcher.tsx  Logo.tsx  UploadZone.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/lib/: api.ts  exams.ts  locale.tsx
frontend/lib/i18n/: fr.ts  index.ts
infra/postgres/: init.sql
scripts/: check_no_dicom.py  init-env.sh  prettier-staged.cjs
