[project]
name = "scintia-backend"
version = "0.0.0"
description = "Scintia / cintiAI — decision-support backend for nuclear medicine (FastAPI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

# Runtime dependencies. Pinned to compatible releases; refine when the lockfile
# is generated (network required). Phase 0 only needs FastAPI + config; the rest
# are declared now so the modular skeleton imports cleanly in later phases.
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "email-validator>=2.1",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "celery>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "python-multipart>=0.0.12",
    "alembic>=1.13,<2.0",
    # DICOM parsing + de-identification.
    "pydicom>=2.4,<4.0",
    "numpy>=1.26,<3.0",
    # Application-level encryption (patient re-identification table) + auth.
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9,<3.0",
    # PDF export of validated reports.
    "reportlab>=4.0,<5.0",
    # AI report drafting (Claude adapter; offline default is the template generator).
    "anthropic>=0.40,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
    "black>=24.0,<25.0",
    "mypy>=1.11,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ── Ruff (lint) ──
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]
# Autogenerated migrations are not hand-linted.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, comprehensions.
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Black (format) ──
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
extend-exclude = "/alembic/versions/"

# ── Pytest ──
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

# ── Mypy (strict typing per CLAUDE.md) ──
[tool.mypy]
# Matches the deployed runtime (Docker python:3.12); numpy 2.x stubs need >= 3.12.
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
